packages/core/fixtures/structure/syntax-error/input.ts
export function broken(a: {
  return a;
}

export function intact(): number {
  return 1;
}
